# advisor_scorecard

./: .env.example  .gitignore  README.md  README_forecast_optimizer.md  config.yaml  gitignore  install_forecast_warning_cleanup.sh  install_forward_test_tool.sh  portfolio_forecast_optimizer.py.bak.20260511_190427  portfolio_forward_test.py  pyproject.toml
advisor_scorecard/: analysis.py  charts.py  classify.py  main.py  monthly_review.py  performance.py  schwab_client.py  schwab_inspect.py  ticker_metadata.py
data/: schwab_holdings.csv  ticker_metadata_cache.csv
